# chess-experiments

./: README.md  pyproject.toml
configs/: run_experiment.yaml
configs/_layout_probe/: individual.yaml  individual_share_both.yaml  individual_share_layers.yaml  individual_share_squares.yaml  per_layer.yaml  per_layer_share_layers.yaml  per_square.yaml  per_square_share_squares.yaml
configs/_probe_train/: linear.yaml  sklearn.yaml
configs/active_squares_probing/: base.yaml  fixed_k.yaml  quick.yaml
configs/cross_model_probing/: base.yaml  quick.yaml
configs/mate_in_1_active_squares_probing/: base.yaml  per_square.yaml
configs/mate_in_1_binary_probing/: base.yaml  individual.yaml  individual_share_both.yaml  individual_share_layers.yaml  individual_share_squares.yaml  per_layer.yaml  per_layer_share_layers.yaml  per_square.yaml  per_square_share_squares.yaml  quick.yaml  sklearn.yaml
configs/mate_in_1_move_probing/: base.yaml  quick.yaml  sklearn.yaml
configs/mate_in_1_probing/: base.yaml  failed.yaml  no_rotate.yaml  quick.yaml  sklearn.yaml  test_per_layer_small_batch.yaml  test_per_square_by_layer_sharing.yaml  test_per_square_sklearn.yaml  test_two_layouts_quick_probe.yaml
docs/: PROJECT_STATUS.md  README.md
latex/: custom.bib  ieee_cog.tex  main.tex  old_main.tex
launch/: README.md
scripts/: active_squares_probing.py  constants.py  cross_model_probing.py  mate_in_1_active_squares_probing.py  mate_in_1_binary_probing.py  mate_in_1_move_probing.py  mate_in_1_probing.py  mate_in_3_probing.py  piece_pruning.py  puzzle_stats.py  run_experiment.py
(+66 files in other folders)
